avoiding scrollbar

--- a/vis/src/styles.css
+++ b/vis/src/styles.css
@@ -1,5 +1,6 @@
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 
+
 body {
     padding: 0px;
     margin: 0px;
@@ -16,7 +17,7 @@ md-toolbar md-toolbar-row {
 }
 
 .app{
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
     overflow-y: hidden;
 }
@@ -49,7 +50,7 @@ md-toolbar md-toolbar-row {
 	top: 32px;
 	bottom: 0px;
 	left: 40%;
-	width: 60%;
+	width: 59%;
 	position: absolute;
 }
 
@@ -59,7 +60,7 @@ md-toolbar md-toolbar-row {
 }
 
 .scatter {
-	width: 100%;
+	width: 99%;
 	height: 100%;
 	margin: 0px;
 	float: left;
@@ -127,7 +128,7 @@ md-toolbar md-toolbar-row {
 }
 
 .pulses {
-	width: 100%;
+	width: 99%;
 	height: 100%;
 	margin: 0px;
 	float: left;
